# Advanced-Programming-Labs-F

./: CMakeLists.txt
LabBook/: 01-Templates.tex  03-BinarySearch.tex  CMakeLists.txt  Header.tex  Lab-F.tex
Tasks/: CMakeLists.txt
Tasks/01-Templates/: Main.cpp
Tasks/02-TemplatedData/: CMakeLists.txt  Grid.hpp
Tasks/03-BinarySearch/: CMakeLists.txt  Main.cpp  binarysearchIn.txt
